styles/styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

body {
    font-family: roboto, sans-serif;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin: 0;
}

ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

a {
    text-decoration: none;
}

a:visited {
    text-decoration: none;
    color: black;
}

.header {
    background-color: rgb(67, 129, 121);
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px 20px;
}

.socials {
    display: flex;
    justify-content: center;
    gap: 20px;
}

.home-button,
.header img {
    height: 50px;
    width: auto;
    border-radius: 5px;
}

.section-header {
    font-size: 40px;
    font-weight: 800;
    color: white;
}

.site-cards > ul {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    background-color: rgb(67, 129, 121);
    border-radius: 5px;
    margin: 50px;
    gap: 15px;
    padding: 15px
}

.card-item {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    flex: auto;
    gap: 10px;
    background-color: white;
    border-radius: 5px;
}

.card-item-link:hover {
    background-color: rgb(210, 230, 230)
}

.card-item img {
    border-radius: 5px;
    height: 150px;
    width: auto;
    margin: 20px;
}

.site-img {
    border: 2px solid black;
}

.card-text-content {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin: 15px 15px 15px 0;
    gap: 10px;
}

.card-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.card-title {
    font-weight: 800;
    font-size: 30px;
}

.card-disclaimer {
    font-style: italic;
    font-size: 16px;
}

.card-text {
    font-size: 20px;
}

.card-text .note {
    padding-top: 10px;
    font-size: 16px;
    font-style: italic;
}

.card-technologies {
    display: flex;
    justify-content:flex-start;
    gap: 10px;
}

.card-technologies > li {
    background-color: rgb(67, 129, 121);
    border-radius: 5px;
    color: white;
    font-weight: 700;
    padding: 2px 4px;
}

.project-feature-list {
    display: flex;
    flex-direction: column;
    list-style: square;
    padding: 10px 20px;
    font-size: 20px;
    gap: 5px;
}

